@@ -23,8 +23,8 @@ content of dictionary references.
   <email />
   <active>yes</active>
  </contributor>
- <date>2012-10-04</date>
- <time>11:18:47</time>
+ <date>2012-10-06</date>
+ <time>09:58:51</time>
  <version>
   <release>2.9.0</release>
   <api>2.9.0</api>
@@ -48,6 +48,7 @@ will not be print anymore on standard output when --report-file option used
 Bug fixes:
 - PHP 5.4 raises notice error (Array to string conversion) in file cache, while PHP 5.2 and 5.3 did not
 - standard reference fixed: mkdir mode parameter is required since PHP 4.0.0 and not 4.2.0 (it became optional)
+- multiple reports may now be appended in the same report file
  </notes>
  <contents>
   <dir baseinstalldir="Bartlett" name="/">
@@ -1328,7 +1329,7 @@ Bug fixes:
     <release>stable</release>
     <api>stable</api>
    </stability>
-   <date>2012-10-04</date>
+   <date>2012-10-06</date>
    <license uri="http://www.opensource.org/licenses/bsd-license.php">BSD License</license>
    <notes>
 Additions and changes:
@@ -1344,6 +1345,7 @@ will not be print anymore on standard output when --report-file option used
 Bug fixes:
 - PHP 5.4 raises notice error (Array to string conversion) in file cache, while PHP 5.2 and 5.3 did not
 - standard reference fixed: mkdir mode parameter is required since PHP 4.0.0 and not 4.2.0 (it became optional)
+- multiple reports may now be appended in the same report file
    </notes>
   </release>
   <release>
